fix chain list overlapping (#429)

--- a/src/pages/wallet/AssetPage.module.scss
+++ b/src/pages/wallet/AssetPage.module.scss
@@ -22,9 +22,13 @@
   }
 }
 
+.chainlist__container {
+  padding-top: 25px;
+  padding-bottom: 1.6rem;
+}
+
 .chainlist {
   background-color: var(--card-bg-muted);
-  padding-top: 25px;
   padding-inline: 10px;
   grid-area: list;
   display: grid;
@@ -35,14 +39,14 @@
 
 .chainlist__title {
   grid-area: title;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   padding-left: 10px;
 }
 
 .chainlist__list {
   overflow-y: auto;
   grid-area: list;
-  padding-bottom: 1.6rem;
+  padding-bottom: 1rem;
 }
 
 .actions {
